# playin-decoder

./: .gitignore  build.gradle
app/: build.gradle
app/src/androidTest/java/com/tech/playin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tech/playin/decoder/: Constants.java  MainActivity.java  PlayActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
playinsdk/: build.gradle
playinsdk/src/main/: AndroidManifest.xml
playinsdk/src/main/cpp/: CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  Playin.cpp  playin.cpp
playinsdk/src/main/java/com/tech/playinsdk/: GameView.java  PlayInSdk.java  PlayInView.java
playinsdk/src/main/java/com/tech/playinsdk/connect/: DataProcess.java  PlaySocket.java
playinsdk/src/main/java/com/tech/playinsdk/decoder/: AudioDecoder.java  BaseDecoder.java  FFmpegDecoder.java  MediaDecoder.java  VideoDecoder.java
playinsdk/src/main/java/com/tech/playinsdk/http/: HttpException.java  HttpHelper.java
playinsdk/src/main/java/com/tech/playinsdk/model/: ApiService.java
playinsdk/src/main/java/com/tech/playinsdk/model/entity/: Advert.java
playinsdk/src/main/java/com/tech/playinsdk/util/: BitmapUtil.java  Constants.java  GameView.java  PILog.java  PlayLog.java
playinsdk/src/main/res/values/: strings.xml
